# project_goose

./: Makefile  README.md  meson.build
data/: meson.build
doc/: Doxyfile  meson.build
tests/: command_test.c  dialogue_test.c  die_test.c  game_management_test.c  game_rules_test.c  graphic_engine_test.c  inventory_test.c  link_test.c  meson.build  object_test.c  player_test.c  set_test.c  space_test.c
